scode/TeamDigital/prob4/error.txt
  File "/var/www/html/scode/TeamDigital/prob4/main.py", line 4
    TDT= 
         ^
SyntaxError: invalid syntax
